--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,14 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   @apply bg-slate-50 text-slate-900;
+}
+
+.font-jenson {
+  font-family: "Adobe Jensin Pro Regular", "Adobe Jenson Pro", "Adobe Garamond Pro", serif;
 }
